--- a/ui/manage_vacancy/index.html
+++ b/ui/manage_vacancy/index.html
@@ -9,10 +9,10 @@
 
 		<script id="sap-ui-bootstrap"
 			src="../../../../resources/sap-ui-core.js"
-			data-sap-ui-libs="sap.m"
+			data-sap-ui-libs="sap.m,iacube.ui.common"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"manage_vacancy": "./"}'
+			data-sap-ui-resourceroots='{"manage_vacancy": "./", "iacube.ui.common":"../common"}'
 			data-sap-ui-xx-bindingSyntax="complex">
 		</script>
 
