--- a/ui/manage_vacancy/index.html
+++ b/ui/manage_vacancy/index.html
@@ -1,40 +1,3 @@
-<<<<<<< Upstream, based on origin/dev
-<!DOCTYPE HTML>
-<html>
-
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta charset="UTF-8">
-
-		<title>vacancymngt</title>
-
-		<script id="sap-ui-bootstrap"
-			src="../../../../resources/sap-ui-core.js"
-			data-sap-ui-libs="sap.m,iacube.ui.common"
-			data-sap-ui-theme="sap_belize"
-			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"manage_vacancy": "./", "iacube": "/"}'
-			data-sap-ui-xx-bindingSyntax="complex">
-		</script>
-
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-
-		<script>
-			sap.ui.getCore().attachInit(function() {
-				new sap.m.Shell({
-					app: new sap.ui.core.ComponentContainer({
-						height : "100%",
-						name : "manage_vacancy"
-					})
-				}).placeAt("content");
-			});
-		</script>
-	</head>
-
-	<body class="sapUiBody" id="content">
-	</body>
-
-=======
 <!DOCTYPE HTML>
 <html>
 
@@ -56,19 +19,14 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
 		<script>
-			sap.ui.getCore().attachInit(function() {
-				new sap.m.Shell({
-					app: new sap.ui.core.ComponentContainer({
-						height : "100%",
-						name : "manage_vacancy"
-					})
-				}).placeAt("content");
-			});
+		sap.ui.getCore().attachInitEvent(function () {
+				iacube.ui.common.initHTML("manage_vacancy", 1000);
+	        });
 		</script>
 	</head>
 
 	<body class="sapUiBody" id="content">
 	</body>
 
->>>>>>> 675e0ab index change
+
 </html>
