Common elements changed, messagebundle, etc.

--- a/ui/requisitions_report/index.html
+++ b/ui/requisitions_report/index.html
@@ -8,11 +8,11 @@
 		<title>Job Requisitions Report</title>
 
 		<script id="sap-ui-bootstrap"
-			src="../../../../resources/sap-ui-core.js"
+			src="https://sapui5.hana.ondemand.com/1.38.14/resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m,iacube.ui.common"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"requisitions_report": "./", "iacube": "/"}'
+			data-sap-ui-resourceroots='{"requisitions_report": "./", "iacube.ui.common":"../common"}'
 			data-sap-ui-xx-bindingSyntax="complex">
 		</script>
 
