commit vacancy mngt

--- a/ui/manage_vacancy/index.html
+++ b/ui/manage_vacancy/index.html
@@ -9,6 +9,9 @@
 
 		<script id="sap-ui-bootstrap"
 			src="/sap/ui5/1/resources/sap-ui-core.js"
+			
+			src="https://sapui5.hana.ondemand.com/1.38.15/resources/sap-ui-core.js"
+
 			data-sap-ui-libs="sap.m,iacube.ui.common"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
