commit comments add, requis close, edit mode prefinal

--- a/ui/manage_vacancy/index.html
+++ b/ui/manage_vacancy/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="UTF-8">
 
-		<title>Vacancy Management</title>
+		<title>Управление заявками на подбор персонала</title>
 
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/1.38.15/resources/sap-ui-core.js"
@@ -28,5 +28,5 @@
 
 	<body class="sapUiBody" id="content">
 	</body>
-
+ 
 </html>
